<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="MOODIE FLIX"
        android:textColor="#6750a4"
        android:textColorLink="#8c52ff"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="32dp"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/how_are_you_feeling_today"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="14dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonHappy"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/happy"
                />

            <Button
                android:id="@+id/buttonSad"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textSize="18sp"
                android:text="@string/sad"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="14dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonAngry"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/angry"
                />

            <Button
                android:id="@+id/buttonRelaxed"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textSize="18sp"
                android:text="@string/relaxed"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="14dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonAnxious"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/anxious"
                />

            <Button
                android:id="@+id/buttonBored"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:text="@string/bored"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="14dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonRomantic"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/romantic"
                />

            <Button
                android:id="@+id/buttonNostalgic"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:text="@string/nostalgic"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>