<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="#424242"
    android:elevation="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Movie Poster -->
        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/movie_poster"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_menu_gallery"
            tools:ignore="ImageContrastCheck" />

        <!-- Movie Name -->

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:lines="2"
            android:text="@string/movie_name"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <!-- Movie Rating -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/critic_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:text="@string/critic_rating_n_a"
                android:textAlignment="center"
                android:textColor="#DD2C00"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/audience_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:text="@string/audience_rating_n_a"
                android:textAlignment="center"
                android:textColor="#DD2C00"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release"
            android:textAlignment="center"
            android:textColor="#0277BD" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
